Fix: Resolution de conflicts et nettoyage du code après merge